--- a/style.css
+++ b/style.css
@@ -1,10 +1,21 @@
-.center{
-    text-align: center;
-}
-
 #input{
     background-color: aliceblue;
     border-radius: 5px;
-    height: 300px;
+    height: 500px;
+    width: 500px;
     border-color: aliceblue;
+    margin-top: 30px;
+    font-size: 20px;
+}
+
+.option-button{
+    background-color: aliceblue;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 20px;
+    border: 1px solid aliceblue;
+}
+
+*{
+    font-family: Helvetica;
 }
